server/mlops/serving/src/k8s/model-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: classifier1-cluster-ip
spec:
  type: ClusterIP
  selector:
    model: classifier1
  ports:
    - port: 8000
      targetPort: 8000
