server/mlops/serving/src/k8s/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  defaultBackend:
    service:
      name: classifier1-cluster-ip
      port:
        number: 8000
